# readerware-browser

./: .gitignore  README.md  pre-commit  pyproject.toml
readerware_browser/: __init__.py  __main__.py  app.py  pagination.py  search.py  sort.py
readerware_browser/models/: author.py  book.py  datatable_responses.py  series.py
readerware_browser/queries/: authors.py  authors.sql  books.py  books.sql  db_connection.py  queries.py  series.py  series.sql  serieses.sql
readerware_browser/static/: style.css
readerware_browser/templates/: authors.html  base.html  book.html  books.html  books.sql  index.html  serieses.html  table.html
tests/: conftest.py  test_items.py  test_setup.sql  test_totals.py
