[project]
name = "readerware-browser"
readme = "README.md"
version = "0.0.0.dev0"

dependencies = [
    "flask~=3.0",
    "psycopg~=3.2",
    "flask-table~=0.5.0"
]

[tool.isort]
profile = "black"
line_length = 99
combine_as_imports = true
force_grid_wrap = 2

[tool.black]
line_length = 99

[tool.mypy]
warn_no_return = true
warn_unreachable = true
strict = true
allow_subclassing_any = true

[tool.pylint]
logging-format-style = "new"
disable="logging-fstring-interpolation"
