[project]
name = "readerware-browser"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "flask~=3.0",
    "psycopg~=3.2",
    "python-dotenv~=1.0",
]

[dependency-groups]
dev = [
  "black",
  "flake8-print>=5",
  "isort",
  "mypy",
  "pylint",
  "pytest",
  "pytest-postgresql",
]

[project.scripts]
test-app = "readerware_browser.__main__:main"

[tool.uv]
package = true

[tool.isort]
profile = "black"
line_length = 99
combine_as_imports = true
force_grid_wrap = 2

[tool.black]
line_length = 99

[tool.mypy]
warn_no_return = true
warn_unreachable = true
strict = true
allow_subclassing_any = true

[tool.pylint]
logging-format-style = "new"
disable="logging-fstring-interpolation"
